@@ -37,6 +37,7 @@ v2.15.0 - 15 Feb 2021
      * Removed support for vhost-user dequeue zero-copy.
      * Add support for DPDK 20.11.
      * Add hardware offload support for tunnel pop action (experimental).
+     * Add hardware offload support for VXLAN flows (experimental).
    - Userspace datapath:
      * Add the 'pmd' option to "ovs-appctl dpctl/dump-flows", which
        restricts a flow dump to a single PMD thread if set.
